--- a/app/src/main/res/values/String.xml
+++ b/app/src/main/res/values/String.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Quiz app UIC</string>
+    <string name="app_name">Nurse Values</string>
 
     <string name="facebook_app_id">2006628019501596</string>
     <string name="fb_login_protocol_scheme">fb2006628019501596</string>
